<resources>
    <string name="app_name">Weather App</string>
    <string name="demo_date">9 Januar</string>
    <string name="default_numbers">100</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp">Max Temp.</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp">Min Temp.</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature_in_f">Temperature In F</string>
    <string name="day">Day 17</string>
    <string name="night">Night</string>
    <string name="main_temp">16*</string>
    <string name="feels_like">Feels like 16*</string>
    <string name="weather_type">Drizzle</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>