<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_sub_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_weather_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/clear_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_x_large"
                    android:layout_marginTop="@dimen/padding_large"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_date_and_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/demo_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_day_max_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/day"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:id="@+id/tv_day_min_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/day"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_temp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/main_temp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_super_large" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/iv_weather_icon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="@dimen/padding_large"
                            android:layout_marginEnd="@dimen/padding_large"
                            app:lottie_fileName="weather_drizzle.json" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_feels_like"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/feels_like"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:id="@+id/tv_weather_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/weather_type"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>


                </LinearLayout>


            </FrameLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/padding_x_large"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/padding_x_large"
                android:elevation="@dimen/padding_x_small"
                android:paddingBottom="@dimen/padding_x_large"
                app:cardCornerRadius="@dimen/padding_large"
                app:cardElevation="@dimen/padding_small"
                app:cardMaxElevation="@dimen/padding_x_small">


            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>